@@ -1,6 +1,11 @@
 Changes from jTDS 0.8.1
 =========================
 
+07/14/2004 - Brian Heineman
+ o Updated ResultSetMetaData.getColumnType(int) always return Types.BIT for BIT
+   Updated tests to ensure this functionality continues to work in the future.
+   http://sourceforge.net/forum/forum.php?thread_id=1108433&forum_id=129584
+   
 07/13/2004 - Brian Heineman
  o Corrected bug [989963] BigInt becomes Numeric;
    ResultSetMetaData.getColumnType(int) now returns Types.BIGINT. Added tests
